update language choices

--- a/django_project/locale/fr/LC_MESSAGES/django.po
+++ b/django_project/locale/fr/LC_MESSAGES/django.po
@@ -2908,7 +2908,7 @@ msgstr ""
 
 #: core/templates/site_index.html:19
 msgid "Haiti Risk and Hazards"
-msgstr ""
+msgstr "Haiti Risques et Dangers"
 
 #: core/templates/site_index.html:22
 msgid "River Flood"
